@@ -1163,6 +1163,7 @@ meta_screen_ensure_tab_popup (MetaScreen *screen,
       entries[i].title = window->title;
       entries[i].icon = window->icon;
       entries[i].blank = FALSE;
+      entries[i].minimized = window->minimized;
       
       if (!window->minimized || !meta_window_get_icon_geometry (window, &r))
         meta_window_get_outer_rect (window, &r);
@@ -1255,6 +1256,7 @@ meta_screen_ensure_workspace_popup (MetaScreen *screen)
           entries[i].title = meta_workspace_get_name (workspace);
           entries[i].icon = NULL;
           entries[i].blank = FALSE;
+          entries[i].minimized = FALSE;
           
           g_assert (entries[i].title != NULL);
         }
@@ -1264,6 +1266,7 @@ meta_screen_ensure_workspace_popup (MetaScreen *screen)
           entries[i].title = NULL;
           entries[i].icon = NULL;
           entries[i].blank = TRUE;
+          entries[i].minimized = FALSE;
         }
 
       ++i;
